--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
       - name: set up node 
         uses: actions/setup-node@v2
         with:
-          node-version: 'latest'
+          node-version: '15'
         - run: ./tests.sh
 
