--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
       - name: set up node 
         uses: actions/setup-node@v2
         with:
-          node-version: '15'
+          node-version: 15
+        - run: npm version
         - run: ./tests.sh
 
