--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,5 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 15
-      - run: ./tests.sh
+      - run: ./misc/tests.sh
 
